# helix

./: .dockerignore  .env  .env.example  .envrc  .gitignore  Cargo.toml  Dockerfile  Dockerfile.db  Dockerfile.tmp  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  admin-config.example.yml  admin.Dockerfile  builder.Dockerfile  chain-info.yml  config.example.yml  config.yml  data-api.Dockerfile  docker-compose.yml  flake.nix  justfile  local.Dockerfile  relay.Dockerfile  rust-toolchain.toml  rustfmt.toml  simulator.Dockerfile
crates/admin/: Cargo.toml  README.md
crates/admin/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/admin/frontend/src/: App.tsx  index.css
crates/admin/src/: assets.rs  config.rs  db.rs  error.rs  handlers.rs  lib.rs  models.rs  relay_client.rs  service.rs
crates/api/: Cargo.toml  README.md  build.rs
crates/api/src/: admin_service.rs  constants.rs  gossip.rs  lib.rs  router.rs  service.rs  test_utils.rs
crates/api/src/auctioneer/: bid_sorter.rs  context.rs  decoder.rs  get_header.rs  get_payload.rs  handle.rs  merging.rs  mod.rs  submit_block.rs  types.rs  validation.rs  worker.rs
crates/api/src/builder/: api.rs  decoder.rs  error.rs  get_builder_info.rs  get_inclusion_list.rs  gossip.rs  hydration.rs  inclusion_list.rs  mod.rs  submit_block.rs  submit_block_v2.rs  submit_header.rs  tests.rs  top_bid.rs  types.rs  v2_check.rs
crates/api/src/constraints/: api.rs  error.rs  mod.rs  tests.rs  types.rs
crates/api/src/gossiper/: README.md  error.rs  grpc_gossiper.rs  mock_gossiper.rs  mod.rs  traits.rs
crates/api/src/integration_tests/: mod.rs  replay_validator_registrations.rs
crates/api/src/middleware/: metrics.rs  mod.rs  tracking.rs
crates/api/src/proposer/: api.rs  block_merging.rs  error.rs  get_header.rs  get_payload.rs  gossip.rs  mod.rs  register.rs  tests.rs  types.rs  update.rs
crates/api/src/relay_data/: api.rs  error.rs  mod.rs  tests.rs
crates/api/test_data/: header_submission_capella_ssz_bytes  header_submission_deneb.json  header_submission_deneb_ssz_bytes  header_v2-deneb.ssz  signed-bid-submission-deneb-2.json  signed_blinded_beacon_block.json  signed_blinded_beacon_block_deneb.json  sim_request_body.json  submitBlockPayloadCapella_Goerli_empty_transactions.json  submitBlockPayloadCapella_Goerli_incorrect_block_hash.json  submitBlockPayloadCapella_Goerli_incorrect_parent_hash.json  submitBlockPayloadCapella_Goerli_incorrect_withdrawal_root.json  submitBlockPayloadCapella_Goerli_zero_value.json  submitBlockPayloadDeneb.json  submitBlockPayloadHeaderCapella.json  submitBlockPayloadHeaderDeneb.json
crates/beacon/: Cargo.toml
crates/beacon-client/: Cargo.toml  README.md
crates/beacon-client/src/: beacon_client.rs  error.rs  lib.rs  mock_beacon_client.rs  mock_multi_beacon_client.rs  multi_beacon_client.rs  traits.rs
crates/beacon-client/src/broadcaster/: bloxroute_broadcaster.rs  fiber_broadcaster.rs  mock_block_broadcaster.rs  mod.rs
crates/beacon-client/src/types/: api.rs  chain.rs  genesis.rs  mod.rs
crates/beacon/src/: beacon_client.rs  error.rs  lib.rs  mock_beacon_client.rs  multi_beacon_client.rs
crates/beacon/src/broadcaster/: fiber_broadcaster.rs  mock_block_broadcaster.rs  mod.rs
crates/beacon/src/types/: api.rs  chain.rs
crates/builder/: Cargo.toml  README.md  config.example.yml
crates/builder/src/: cli.rs  config.rs  main.rs  node.rs  spine.rs  utils.rs
crates/builder/src/engine/: convert.rs  error.rs  mod.rs  payment.rs  session.rs  simulate.rs  tests.rs  types.rs
crates/builder/src/server/: codec.rs  mod.rs  session.rs  tests.rs
crates/cmd/: Cargo.toml
crates/cmd/src/: main.rs
crates/common/: Cargo.toml  build.rs
crates/common/src/: adjustments.rs  alerts.rs  api_provider.rs  beacon_api.rs  bid_sorter.rs  builder_info.rs  chain_info.rs  config.rs  decoder.rs  fork_info.rs  lib.rs  local_cache.rs  merging_pool.rs  metadata_provider.rs  metrics.rs  pending_block.rs  proofs.rs  proposer.rs  serde_utils.rs  signing.rs  simulator.rs  slot_info.rs  task.rs  utils.rs  validator.rs
crates/common/src/api/: builder_api.rs  data_api.rs  (+3 more)
crates/common/test_data/: custom.yaml
crates/data-api/: Cargo.toml
crates/data-api/src/: api.rs  config.rs  error.rs  lib.rs  service.rs  stats.rs
crates/database/: Cargo.toml  build.rs
crates/database/src/: error.rs  handle.rs  lib.rs  mock_database_service.rs  snapshot.rs  traits.rs
crates/datastore/: Cargo.toml
crates/datastore/src/: error.rs  lib.rs
crates/housekeeper/: Cargo.toml
crates/housekeeper/src/: chain_event_updater.rs  error.rs  housekeeper.rs  housekeeper_tests.rs  inclusion_list_fetcher.rs  lib.rs  primev_service.rs  slot_info.rs
crates/operator/: Cargo.toml
crates/operator/src/: lib.rs  pubsub.rs  utils.rs
crates/p2p/: Cargo.toml
crates/p2p/src/: client-main.rs  handlers.rs  il_consensus.rs  lib.rs  main.rs  message_handler.rs  messages.rs  request_handlers.rs  tx_ordering.rs
crates/relay/: Cargo.toml  build.rs
crates/relay/examples/: housekeeper_live.rs
crates/relay/src/: lib.rs  main.rs
crates/simulator/: Cargo.toml  builders.json.example
crates/simulator/src/: common.rs  main.rs  ssz_server.rs  state_recorder.rs  tx_sink.rs
crates/tcp-types/: Cargo.toml
crates/tcp-types/examples/: merging_relay_client.rs
crates/tcp-types/src/: lib.rs
crates/test-harness/: Cargo.toml
crates/types/: Cargo.toml
crates/types/benches/: blob_bundle.rs  execution_payload.rs  signed_bid_submission.rs  topbid_ssz.rs
crates/types/src/: bid_adjustment_data.rs  bid_submission.rs  blobs.rs  block_merging.rs  builder_bid.rs  clock.rs  error.rs  execution_payload.rs  fields.rs  hydration.rs  lib.rs  operator.rs  signed_bid_submission.rs  spec.rs  test_utils.rs  utils.rs  validator.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  request_encoding.rs  serde.rs  signing.rs
crates/website/: Cargo.toml
crates/website/src/: handlers.rs  lib.rs  models.rs  postgres_db_website.rs  state.rs  templates.rs  website_service.rs
crates/website/templates/: index.html
(+372 files in other folders)
