[workspace]
members = [
  "bin/helix",

  "crates/api",
  "crates/beacon",
  "crates/common",
  "crates/database",
  "crates/housekeeper",
  "crates/network",
  "crates/types",
  "crates/website",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gattaca-com/helix"
rust-version = "1.88.0"
version = "0.0.1"

[workspace.dependencies]
alloy-consensus = { version = "1.0.30", features = ["k256"] }
alloy-eips = { version = "1.0.30", features = ["kzg"] }
alloy-primitives = { version = "1.3.1", features = ["getrandom", "k256"] }
alloy-rlp = "0.3.12"
alloy-rpc-types = { version = "1.0.30", features = ["beacon", "engine", "ssz"] }
alloy-serde = "1.0.30"
askama = "0.12.0"
async-trait = "0.1"
auto_impl = "1.0.1"
axum = { version = "0.8", features = ["matched-path", "ws"] }
backtrace = "0.3.69"
bitflags = "2.8.0"
bytes = "1.10"
cbor4ii = { version = "1.0.0", features = ["serde1"] }
clap = { version = "4.2.7", features = ["derive"] }
criterion = "0.7.0"
crossbeam-channel = "0.5.15"
dashmap = { version = "5.5.3", features = [] }
deadpool-postgres = "0.11.0"
ethereum_serde_utils = "0.8"
ethereum_ssz = "0.9"
ethereum_ssz_derive = "0.9"
ethers = "2.0.14"
eyre = "0.6.12"
flate2 = "1.0"
futures = "0.3"
futures-util = { version = "0.3", features = ["compat"] }
helix-api = { path = "./crates/api" }
helix-beacon = { path = "./crates/beacon" }
helix-common = { path = "crates/common" }
helix-database = { path = "./crates/database" }
helix-housekeeper = { path = "./crates/housekeeper" }
helix-network = { path = "./crates/network" }
helix-types = { path = "./crates/types" }
helix-website = { path = "./crates/website" }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.3"
httpmock = "0.7.0"
hyper = "1.1.0"
lazy_static = "1.5.0"
lh-bls = { package = "bls", git = "https://github.com/sigp/lighthouse", rev = "e5b4983d6baf85770fe4539a565d8a2dd462bc53" }
lh-eth2 = { package = "eth2", git = "https://github.com/sigp/lighthouse", rev = "e5b4983d6baf85770fe4539a565d8a2dd462bc53" }
lh-kzg = { package = "kzg", git = "https://github.com/sigp/lighthouse", rev = "e5b4983d6baf85770fe4539a565d8a2dd462bc53" }
lh-slot-clock = { package = "slot_clock", git = "https://github.com/sigp/lighthouse", rev = "e5b4983d6baf85770fe4539a565d8a2dd462bc53" }
lh-test-random = { package = "test_random_derive", git = "https://github.com/sigp/lighthouse", rev = "e5b4983d6baf85770fe4539a565d8a2dd462bc53" }
lh-types = { package = "types", git = "https://github.com/sigp/lighthouse", rev = "e5b4983d6baf85770fe4539a565d8a2dd462bc53" }
mockito = "1.1.1"
moka = { version = "0.12.10", features = ["sync"] }
num-format = "0.4.4"
opentelemetry = { version = "0.29", features = ["trace"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "trace"] }
parking_lot = "0.12"
pin-project-lite = "0.2.16"
prometheus = "0.13.4"
prost = "0.12"
rand = "0.9.2"
refinery = { version = "0.8", features = ["tokio-postgres"] }
reqwest = { version = "0.11.23", features = ["blocking", "json", "native-tls-vendored", "stream"] }
reqwest-eventsource = "0.5"
rustc-hash = "2.1.1"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.106"
serde_yaml = "0.9.25"
serial_test = "1.0.0"
sha2 = "0.10.8"
smallvec = { version = "1.15", features = ["serde"] }
ssz_types = "0.11"
teloxide = { version = "0.13", features = ["macros"] }
thiserror = "1.0.49"
tikv-jemallocator = { version = "0.5", features = ["profiling"] }
tokio = { version = "1.43", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-tungstenite = "0.27.0"
tonic = { version = "0.10", features = ["gzip"] }
tonic-build = "0.10"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tower_governor = { version = "0.6.0", features = ["axum"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tree_hash = "0.10"
tree_hash_derive = "0.10"
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.5", features = ["fast-rng", "v4"] }
zstd = "0.13.3"

[patch.crates-io]
ethereum_ssz = { git = "https://github.com/sigp/ethereum_ssz", rev = "7aec9c0cdf886f08f15fe9296646c2451356084f" }
ethereum_ssz_derive = { git = "https://github.com/sigp/ethereum_ssz", rev = "7aec9c0cdf886f08f15fe9296646c2451356084f", package = "ethereum_ssz_derive" }
