[workspace]
default-members = ["crates/relay"]
members = ["crates/common", "crates/relay", "crates/simulator", "crates/tcp-types", "crates/types"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gattaca-com/helix"
rust-version = "1.91.0"
version = "0.0.1"

[workspace.dependencies]
alloy-consensus = { version = "1.0.41", default-features = false, features = ["k256"] }
alloy-eips = { version = "1.0.41", default-features = false, features = ["kzg"] }
alloy-primitives = { version = "1.4.1", features = ["getrandom", "k256"] }
alloy-rlp = { version = "0.3.12", default-features = false, features = ["core-net"] }
alloy-rpc-types = { version = "1.0.41", default-features = false, features = ["beacon", "engine", "ssz"] }
alloy-serde = "1.0.41"
alloy-signer = { version = "1.0.41" }
alloy-signer-local = { version = "1.0.41" }
alloy-sol-types = { version = "1.4.1", default-features = false }
askama = "0.12.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["matched-path", "ws"] }
backtrace = "0.3.69"
bitflags = "2.10.0"
blst = { version = "0.3.16", features = ["no-threads"] }
bytes = "1.10"
chrono = { features = ["serde"], version = "0.4.38" }
clap = { version = "4.5", features = ["derive"] }
core_affinity = "0.8.3"
criterion = "0.7.0"
crossbeam-channel = "0.5.15"
dashmap = { version = "5.5.3", features = [] }
deadpool-postgres = "0.11.0"
derive_more = { version = "2", default-features = false, features = ["full"] }
ethereum_serde_utils = "0.8"
ethereum_ssz = "0.9"
ethereum_ssz_derive = "0.9"
ethers = "2.0.14"
eyre = "0.6.12"
flate2 = "1.0"

flux = { git = "https://github.com/gattaca-com/flux", rev="1fbb6568ee3635e3763e7dec52625b01a673837f"}
flux-network = { package = "flux-network", git = "https://github.com/gattaca-com/flux", rev = "1fbb6568ee3635e3763e7dec52625b01a673837f"}
flux-type-hash = { package = "type-hash", git = "https://github.com/gattaca-com/flux", rev = "1fbb6568ee3635e3763e7dec52625b01a673837f"}
flux-type-hash-derive = { package = "type-hash-derive", git = "https://github.com/gattaca-com/flux", rev = "1fbb6568ee3635e3763e7dec52625b01a673837f"}

futures = "0.3"
futures-util = { version = "0.3", features = ["compat"] }
helix-common = { path = "crates/common" }
helix-tcp-types = { path = "./crates/tcp-types" }
helix-types = { path = "./crates/types" }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1.3"
httpmock = "0.7.0"
hyper = "1.1.0"
jsonrpsee = { version = "0.26.0", features = ["macros", "server"] }
lazy_static = "1.5.0"
lh-bls = { package = "bls", git = "https://github.com/sigp/lighthouse", tag = "v8.0.1" }
lh-eth2 = { package = "eth2", git = "https://github.com/sigp/lighthouse", tag = "v8.0.1" }
lh-kzg = { package = "kzg", git = "https://github.com/sigp/lighthouse", tag = "v8.0.1" }
lh-slot-clock = { package = "slot_clock", git = "https://github.com/sigp/lighthouse", tag = "v8.0.1" }
lh-test-random = { package = "test_random_derive", git = "https://github.com/sigp/lighthouse", tag = "v8.0.1" }
lh-types = { package = "types", git = "https://github.com/sigp/lighthouse", tag = "v8.0.1" }
metrics = "0.24.0"
mockito = "1.1.1"
moka = { version = "0.12.10", features = ["sync"] }
num-format = "0.4.4"
num_cpus = "1.17.0"
opentelemetry = { version = "0.29", features = ["trace"] }
opentelemetry-otlp = { version = "0.29", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.29", features = ["rt-tokio", "trace"] }
parking_lot = "0.12"
pin-project-lite = "0.2.16"
prometheus = "0.13.4"
prost = "0.12"
rand = "0.9.2"
refinery = { version = "0.8", features = ["tokio-postgres"] }
reqwest = { version = "0.11.23", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
reqwest-eventsource = "0.5"
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1", features = ["cli", "full"] }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.9.1" }
revm = { version = "31.0.1", default-features = false }
rustc-hash = "2.1.1"
serde = { version = "1.0.191", features = ["derive"] }
serde_json = "1.0.106"
serde_with = "1.14"
serde_yaml = "0.9.25"
serial_test = "1.0.0"
sha2 = "0.10.8"
smallvec = { version = "1.15", features = ["serde"] }
ssz_types = "0.11"
strum = "0.27"
strum_macros = "0.27"
teloxide = { version = "0.13", features = ["macros"] }
thiserror = "1.0.49"
tikv-jemallocator = { version = "0.6", features = ["profiling"] }
tokio = { version = "1.43", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-serde_json-1"]}
tokio-tungstenite = "0.27.0"
tonic = { version = "0.10", features = ["gzip"] }
tonic-build = "0.10"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.1", features = ["full"] }
tower_governor = { version = "0.6.0", features = ["axum"] }
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-opentelemetry = "0.30"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tree_hash = "0.10"
tree_hash_derive = "0.10"
url = { version = "2.4", features = ["serde"] }
uuid = { version = "1.5", features = ["fast-rng", "v4"] }
zstd = "0.13.3"

[patch.crates-io]
ethereum_ssz = { git = "https://github.com/sigp/ethereum_ssz", rev = "7aec9c0cdf886f08f15fe9296646c2451356084f" }
ethereum_ssz_derive = { git = "https://github.com/sigp/ethereum_ssz", rev = "7aec9c0cdf886f08f15fe9296646c2451356084f", package = "ethereum_ssz_derive" }
