[package]
name = "helix-api"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
# Helix Workspace 
helix-datastore.workspace = true
helix-beacon-client.workspace = true
helix-database.workspace = true
helix-common.workspace = true
helix-utils.workspace = true
helix-housekeeper.workspace = true

# Async and Networking 
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
reqwest = { workspace = true }
reqwest-eventsource = "0.5"
tokio = { workspace = true }
tokio-tungstenite = "0.16"
tokio-stream = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
tonic = "0.10"
prost = "0.12"

# Serialization and Data Format 
flate2 = "1.0"
serde.workspace = true
serde_json.workspace = true

# DB 
redis.workspace = true

# Ethereum Types
reth-primitives.workspace = true
ethereum-consensus.workspace = true

# Testing and Mocking
serial_test.workspace = true
mockito.workspace = true

# Misc
auto_impl.workspace = true
rand = "0.8"
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
bytes = "1.5"
moka = "0.9"

[dev-dependencies]
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build = "0.10"
