[package]
edition.workspace = true
license.workspace = true
name = "helix-api"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
axum.workspace = true
bytes.workspace = true
cbor4ii.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
flate2.workspace = true
futures.workspace = true
helix-beacon.workspace = true
helix-common.workspace = true
helix-database.workspace = true
helix-datastore.workspace = true
helix-housekeeper.workspace = true
helix-types.workspace = true
hyper.workspace = true
mockito.workspace = true
moka.workspace = true
parking_lot.workspace = true
prost.workspace = true
rand.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
serial_test.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tonic.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[build-dependencies]
tonic-build.workspace = true
