[package]
name = "helix-beacon-client"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
helix-common.workspace = true
helix-utils.workspace = true

# Async and Networking 
axum.workspace = true
async-trait.workspace = true
futures = { workspace = true }
http.workspace = true
reqwest.workspace = true
reqwest-eventsource = { workspace = true }
tokio.workspace = true
url.workspace = true

# Serialization and Data Format 
serde.workspace = true
serde_json.workspace = true

# Ethereum Types
ethereum-consensus.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Testing and Mocking
mockito.workspace = true

# Misc
auto_impl.workspace = true
flate2 = { workspace = true }
thiserror.workspace = true

# Broadcasting
fiber.workspace = true