[package]
edition.workspace = true
license.workspace = true
name = "helix-beacon"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
auto_impl.workspace = true
axum.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
futures.workspace = true
helix-common.workspace = true
helix-types.workspace = true
http.workspace = true
httpmock.workspace = true
mockito.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
