[package]
name = "helix-cmd"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
helix-api.workspace = true
helix-website.workspace = true
helix-common.workspace = true
helix-utils.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5", features = ["profiling"] }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

num_cpus = "1.16.0"
futures = "0.3.28"