[package]
edition.workspace = true
license.workspace = true
name = "helix-cmd"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures.workspace = true
helix-api.workspace = true
helix-common.workspace = true
helix-database.workspace = true
helix-utils.workspace = true
helix-website.workspace = true
num_cpus.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
