[package]
edition.workspace = true
license.workspace = true
name = "helix-common"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
auto_impl.workspace = true
axum.workspace = true
bitflags.workspace = true
clap.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
eyre.workspace = true
helix-types.workspace = true
helix-utils.workspace = true
lazy_static.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
