[package]
edition.workspace = true
license.workspace = true
name = "helix-common"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
auto_impl.workspace = true
axum.workspace = true
backtrace.workspace = true
bitflags.workspace = true
bytes.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
eyre.workspace = true
helix-types.workspace = true
http.workspace = true
lazy_static.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
url.workspace = true
uuid.workspace = true
