[package]
edition.workspace = true
license.workspace = true
name = "helix-common"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
axum.workspace = true
backtrace.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
core_affinity.workspace = true
dashmap.workspace = true
ethereum_serde_utils.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
eyre.workspace = true
flate2.workspace = true
flux.workspace = true
flux-utils.workspace = true
futures.workspace = true
helix-types.workspace = true
http.workspace = true
lazy_static.workspace = true
num_cpus.workspace = true
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
parking_lot.workspace = true
prometheus.workspace = true
rand.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
eventsource-stream.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
ssz_types.workspace = true
strum.workspace = true
teloxide.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
tracing-subscriber.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true
url.workspace = true
uuid.workspace = true
zstd.workspace = true

mio = { version = "1.2.0", features = ["net", "os-poll"] }
hyper = { version = "1.9.0", features = ["client", "http1"] }
rustls = "0.23"
webpki-roots = "0.26"
http-body-util = "0.1"

[dev-dependencies]
httpmock.workspace = true
mockito.workspace = true
