[package]
edition.workspace = true
license.workspace = true
name = "helix-data-api"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
clap = { workspace = true }
reqwest.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tower_governor.workspace = true
crossbeam-channel.workspace = true
eyre.workspace = true
helix-common.workspace = true
helix-database.workspace = true
helix-types.workspace = true
moka.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
