[package]
name = "helix-database"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
helix-common.workspace = true

# Async and Networking 
async-trait.workspace = true
tokio.workspace = true

# Serialization and Data Format 
serde.workspace = true
serde_json.workspace = true

# DB 
tokio-postgres.workspace = true
deadpool-postgres.workspace = true
refinery.workspace = true
bytes.workspace = true

# Ethereum Types
ethereum-consensus.workspace = true

# Testing
env_logger.workspace = true

# Misc 
hex.workspace = true
rand = "0.8"
dashmap.workspace = true
thiserror.workspace = true
tracing.workspace = true
