[package]
edition.workspace = true
license.workspace = true
name = "helix-database"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
deadpool-postgres.workspace = true
helix-common.workspace = true
helix-types.workspace = true
helix-utils.workspace = true
rand.workspace = true
refinery.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-postgres.workspace = true
tracing.workspace = true
