[package]
name = "helix-datastore"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
helix-beacon-client.workspace = true
helix-database.workspace = true
helix-common.workspace = true

# Async and Networking
async-trait.workspace = true
axum.workspace = true
hyper.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true

# Serialization and Data Format 
reth-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true

# Ethereum Types
ethereum-consensus.workspace = true

# DB
deadpool-redis = { workspace = true, features = ["rt_tokio_1"] }
redis = { workspace = true, features = ["aio", "tokio-comp"] }

# Misc
auto_impl.workspace = true
thiserror.workspace = true
tracing.workspace = true