[package]
edition.workspace = true
license.workspace = true
name = "helix-datastore"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-primitives.workspace = true
async-trait.workspace = true
auto_impl.workspace = true
axum.workspace = true
crossbeam-channel.workspace = true
dashmap.workspace = true
ethereum_ssz.workspace = true
eyre.workspace = true
futures-util.workspace = true
helix-beacon.workspace = true
helix-common.workspace = true
helix-database.workspace = true
helix-types.workspace = true
http.workspace = true
moka.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serial_test.workspace = true
