[package]
edition.workspace = true
license.workspace = true
name = "helix-housekeeper"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-eips.workspace = true
alloy-primitives.workspace = true
crossbeam-channel.workspace = true
ethers.workspace = true
eyre.workspace = true
futures.workspace = true
helix-beacon.workspace = true
helix-common.workspace = true
helix-database.workspace = true
helix-datastore.workspace = true
helix-p2p.workspace = true
helix-types.workspace = true
httpmock.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tree_hash.workspace = true
uuid.workspace = true
