[package]
edition.workspace = true
license.workspace = true
name = "helix-p2p"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
axum.workspace = true
futures.workspace = true
helix-common.workspace = true
helix-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true

[[bin]]
name = "helix-p2p-client"
path = "src/client-main.rs"
