[package]
edition.workspace = true
license.workspace = true
name = "helix-p2p"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
axum.workspace = true
ethereum_ssz.workspace = true
ethereum_ssz_derive.workspace = true
futures.workspace = true
helix-common.workspace = true
helix-types.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[dev-dependencies]
hex = "0.4"
rand.workspace = true
