[package]
edition.workspace = true
license.workspace = true
name = "helix-relay"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
crossbeam-channel.workspace = true
eyre.workspace = true
helix-api.workspace = true
helix-beacon.workspace = true
helix-common.workspace = true
helix-database.workspace = true
helix-housekeeper.workspace = true
helix-network.workspace = true
helix-types.workspace = true
helix-website.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator.workspace = true
